# rusti

./: .gitattributes  .gitignore  AI_GUIDE.md  AI_GUIDE_FOR_WRITING_AZUMI.md  AZUMI_COMPARISON.md  AZUMI_COMPREHENSIVE_COMPARISON.md  AZUMI_DEMO_IMPROVEMENTS.md  AZUMI_LESSON_PLAN.md  AZUMI_LIVE.md  AZUMI_LIVE_README.md  AZUMI_M  AZUMI_README.md  AZUMI_STRENGTHS.md  AZUMI_VERIFIED_COMPARISON.md  Branch of Rust Azumi Component Styling Choices.txt  COMPETITIVE_ANALYSIS.md  COMPREHENSIVE_FRAMEWORK_COMPARISON.md  Cargo.toml  DOCS.md  EMOJI_AND_LIFETIMES.md  EXAMPLES.md  FRAMEWORK_COMPARISON_ACCURATE.md  FRAMEWORK_COMPARISON_CONSOLIDATED.md  HOT_RELOAD.md  KNOWN_ISSUES.md  LIMITATIONS.md  README copy 2.md  README copy.md  README.md  README2.md  TODO.md  UPDATES_SUMMARY.md  USAGE.md  ai_rules.md  azumi live talk.txt  azumi_ai_comparison.md  azumi_comparison.md  azumi_review.md  build.rs  build_output.txt  (+36 more)
demo/: COMPREHENSIVE_GUIDE.md  Cargo.toml  README.md  TODO.md  check_output.txt  check_output_new.txt  comprehensive-20-lesson-curriculum.md  lesson-restructuring-plan.md  lesson-structure-analysis.md  test.db
demo/src/: about.rs  advanced.rs  base_layout_demo.rs  basic_html_no_parser.rs  basic_page.rs  component_macro_demo.rs  comprehensive_demo.rs  config.rs  datastar.rs  datastar_extended.rs  db.rs  error_test.rs  extreme.rs  let_demo.rs  main.rs  main_additions.rs  minimal_script_test.rs  optional_props_demo.rs  quote_demo.rs  repro_move.rs  scoped_css_demo.rs  script.js  script_style_demo.rs  script_support_demo.rs  simple_script_test.rs  style_src_demo.rs  styles.css  styles_demo.rs  tailwind_demo.rs  warning_test.rs  warning_test_2.rs  working_scripts_demo.rs
demo/src/actions/: like.rs  mod.rs
demo/src/components/: image.rs
demo/src/examples/: COMPONENT_COMPOSITION_GUIDE.md  README.md  accessibility_tests.rs  advanced_components.rs  advanced_patterns.rs  attributes.rs  azumi_plus_demo.css  azumi_plus_demo.rs  components.rs  composition.rs  conditionals.rs  control_flow.rs  css_variables.css  css_variables.rs  dashboard.rs  data_processing.rs  educational_homepage.rs  example_component.rs  form.rs  forms.rs  fragment_test.rs  global_test.rs  hello.rs  homepage.rs  htmx_todo.rs  layouts.rs  less  lesson-1.rs  lesson0.css  lesson0.rs  lesson1.rs  lesson2.rs  lesson3.rs  lesson4.rs  lesson_a.rs  lessona.css  lessona.rs  let_examples.rs  live_component_demo.rs  live_demo.rs  (+21 more)
demo/src/handlers/: todo.rs
demo/src/scripts/: interactive_counter.rs  mod.rs  simple_script_test.rs  todo_app.rs  todo_app_htmx.rs
demo/static/: advanced_components.css  advanced_patterns.css  azumi.js  components.css  control_flow.css  dashboard.css  data_processing.css  educational_homepage.css  example_card.css  forms.css  global-test.css  global.css  hello.css  hello.js  homepage.css  layouts.css  lesson-template.css  lesson0.css  lesson1.css  lesson16.js  lesson2.css  lesson23-chart.js  lesson3.css  lesson7.css  lesson_a.css  let_examples.css  navigation_component.css  premium_homepage.css  real_world_apps.css  test_card2.css  todo.css  ui_library.css
demo/static/pages/: button.css  homepage.css  lesson  lesson0.css  lesson1.css  lesson10.css  lesson11.css  (+38 more)
macros/: Cargo.toml
macros/src/: accessibility_validator.rs  action.rs  attr_tests.rs  component.rs  css.rs  css_tests.rs  css_validator.rs  head.rs  html_structure_validator.rs  lib.rs  live.rs  parser.rs  parser_test.rs  schema.rs  style.rs  test_spacing.rs  tests.rs  token_parser.rs  token_parser_tests.rs
macros/tests/: parser_tests.rs
reference-rusti/azumi-starter/: .env.example  Cargo.toml  README.md
(+233 files in other folders)
