[package]
name = "azumi"
version = "1.3.53"
edition = "2021"
authors = [" DraconDev <dracsharp@gmail.com>"]
license = "MIT"
description = "Type-safe, compile-time HTML templating for Rust"
repository = "https://github.com/DraconDev/azumi"
keywords = ["html", "template", "macro", "web"]
categories = ["template-engine", "web-programming"]

[workspace]
members = ["macros", "demo"]
resolver = "2"

[dependencies]
azumi-macros = { path = "macros" }

[dev-dependencies]


