[package]
name = "azumi"
version = "0.7.158"
edition = "2021"
authors = [" DraconDev <dracsharp@gmail.com>"]
license = "MIT"
description = "Type-safe, compile-time HTML templating for Rust"
repository = "https://github.com/DraconDev/azumi"
keywords = ["html", "template", "macro", "web"]
categories = ["template-engine", "web-programming"]

[workspace]
members = ["macros", "demo"]
resolver = "2"

[features]
schema = ["azumi-macros/schema", "dep:serde", "dep:serde_json"]

[dependencies]
azumi-macros = { path = "macros" }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]


