[package]
name = "rusti-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rusti = { path = ".." }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
rand = "0.8"
